[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.11",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pandas-market-calendars>=5.1.1",
    "streamlit-autorefresh>=1.0.1",
    "streamlit>=1.48.0",
    "vadersentiment>=3.3.2",
    "yfinance>=0.2.65",
    "pytz>=2025.2",
    "requests>=2.32.4",
    "trafilatura>=2.0.0",
    "textblob>=0.19.0",
    "scipy>=1.16.1",
    "scikit-learn>=1.7.1",
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "plotly>=6.2.0",
    "alpha-vantage>=3.0.0",
    "finnhub-python>=2.4.24",
]
